--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="assets/css/style.min.css">
     <script src="assets/js/app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+   
+    <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -23,11 +25,11 @@
 <body class="bg-[#000c1a] text-white  transition-all">
     <header>
         <div class="container mx-auto px-6 md:px-8 ">
-        <div class="header-content-wrapper flex flex-col md:flex-row gap-7 md:gap-0 justify-between md:items-center py-3 border-b border-solid border-1 border-gray-500   ">
+        <div class="header-content-wrapper w-full  flex flex-col md:flex-row gap-7 md:gap-0 justify-between md:items-center py-3 border-b border-solid border-1 border-gray-500   ">
             <div class="logo-and-nav-ico-wrapper flex justify-between items-center">
                 <div class="logo-all-wrapper">
-                <div class="logo-word-one text-3xl tracking-wider">Emre Eroğlu</div>
-                <div class="logo-word-two">Jr.Front-End Devloper</div>
+                <div class="logo-word-one text-3xl tracking-wider transition-all">Emre Eroğlu</div>
+                <div class="logo-word-two transition-all">Jr.Front-End Devloper</div>
             </div>
             <div class="nav-ico-all-wrapper scale-[2]">
                 <button class="hamb-btn md:hidden" onclick="navOpen()">
@@ -53,13 +55,13 @@
                 </nav>
             </div>
             <div class="light-dark-mode-wrapper hidden md:block">
-            <div class="flex py-4 md:py-0 gap-10 md:gap-5 justify-center md:justify-normal">
+            <div class="flex py-4 md:py-0 gap-10 md:gap-7 justify-center md:justify-normal">
                 <button class="light-button scale-[1.4]" onclick="lightMode()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-high" viewBox="0 0 16 16">
                         <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6m0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708"/>
                       </svg>
                 </button>
-                <button class="dark-button scale-[1.4]" onclick="darkMode()">
+                <button class="dark-button scale-[1.4] hidden" onclick="darkMode()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon" viewBox="0 0 16 16">
                         <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278M4.858 1.311A7.27 7.27 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.32 7.32 0 0 0 5.205-2.162q-.506.063-1.029.063c-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286"/>
                       </svg>
@@ -69,6 +71,44 @@
         </div>
     </div>
     </header>
-    
+
+  <section> 
+    <div class="container mx-auto px-6 md:px-8 ">
+      <div class="grid-rows-1 transition-all my-14 ">
+        <div class="grid grid-cols-12 gap-14 lg:gap-0">
+          <div class="col-span-12 lg:col-span-6  py-5 px-5 xl:px-24 text-lg flex items-center justify-center ">
+            <div class="banner-start-item-wrapper flex flex-col items-start gap-9">
+              <div class="content-heading-wrapper flex w-full justify-center items-center text-4xl ">
+               <span>Kim Bu Çocuk Adam ?</span>
+              </div>
+              <div class="content-wrapper flex flex-col gap-5 ">
+                <span class="">Bilgisayar Programcılığı mezunu, Front-End alanında kendini geliştirmeye ve kariyer sahibi olma çabası içerisinde bir 22 yaşında bir genç.</span>
+                <span class="">Yetenekleri arasında; HTMl5-Middle, CSS3-Middle, Bootstrap5-Low, Tailwindcss-Low gibi teknolojiler yer almakta.</span>
+              </div>
+              <div class="content-btn-wrapper flex w-full justify-center">
+                <div class="relative">
+                <a href="#?" onmouseover="planePlayOver()" onmouseout="planeStopOver()" class="btn py-3 px-5 bg-slate-900 border-gray-50 border-solid border-[1px] hover:shadow-zinc-50 transition-all rounded-full inline-block">Benimle İletişime Geç !</a>
+                <div class="plane-wrapper  absolute hidden ">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send-fill" viewBox="0 0 16 16">
+                    <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z"/>
+                  </svg>
+                </div>
+              </div>
+           
+              </div>
+            </div>
+          </div>
+          <div class="col-span-12 lg:col-span-6  p-5 flex items-center justify-center ">
+            <div class="banner-end-item-wrapper">
+              <div class="profile-imd-wrapper flex justify-center items-center">
+                <img class="profile-img  shadow-xl lazyload w-[50%] rounded-full border-gray border-solid border-2" src="assets/img/banner/profil.png" data-src="assets/img/banner/money.png"/>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
 </body>
 </html>
