--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </header>
 
   <section> 
-    <div class="container mx-auto px-3 md:px-8 ">
+    <div class="container mx-auto px-3 md:px-8 overflow-hidden">
       <div class="grid-rows-1 transition-all my-5 md:my-14 ">
         <div class=" lg:grid grid-cols-12 gap-14 lg:gap-0">
           <div class="col-span-12 lg:col-span-6  py-5 px-5 xl:px-24 text-lg flex items-center justify-center ">
