--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="col-span-12 lg:col-span-6  py-5 px-5 xl:px-24 text-lg flex items-center justify-center ">
               <div class="banner-start-item-wrapper flex flex-col items-start gap-9">
                 <div class="content-heading-wrapper flex w-full justify-center items-center text-4xl ">
-                  <span>Kim Bu Çocuk Adam ?</span>
+                  <span>O Kim ?</span>
                 </div>
                 <div class="content-wrapper flex flex-col gap-5 ">
                   <span class="">Bilgisayar Programcılığı mezunu, Front-End alanında kendini geliştirmeye ve kariyer sahibi olma çabası içerisinde bir 22 yaşında bir genç.</span>
