--- a/porf.html
+++ b/porf.html
@@ -72,6 +72,7 @@
     </div>
     </header>
 
+   <section class="relative">
   <section> 
     <div class="container mx-auto px-3 md:px-8 overflow-hidden">
       <div class="grid-rows-1 transition-all my-5 md:my-16 ">
@@ -184,6 +185,12 @@
       </div>
     </div>
   </section>
+  <section class="absolute inset-0 z-[-1] opacity-[0.5] md:opacity-[1]   flex justify-end">
+    <div class="banner-background h-full">
+      <img src="assets/img/banner/pngwing.com (50).png" class="h-full" alt="">
+    </div>
+  </section>
+</section>  
   
   <footer >
     <div class="container mx-auto py-10  px-6 md:px-8">
