--- a/iletisim.html
+++ b/iletisim.html
@@ -22,6 +22,15 @@
 
     <title>Emre</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JW9PS9J0S5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JW9PS9J0S5');
+</script>
 <body class=" bg-[#000c1a] text-white  transition-all ">
     <header>
         <div class="container mx-auto px-6 md:px-8 ">
