--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
   <title>Emre</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JW9PS9J0S5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JW9PS9J0S5');
+</script>
 
 <body class="text-white  transition-all bg-[#000c1a]">
   <header>
